feat: create media component

--- a/assets/style/colors.scss
+++ b/assets/style/colors.scss
@@ -1,5 +1,4 @@
 $dark-1: rgba(36, 35, 37, 1);
-$dark-2: rgba(142, 184, 229, 1);
-$dark-3: rgba(124, 153, 180, 1);
+$dark-2: rgb(49, 49, 54);
 $white: rgba(107, 127, 130, 1);
 $red: rgba(240, 45, 58, 1);
