refactor: refactor and add responsive

--- a/assets/style/colors.scss
+++ b/assets/style/colors.scss
@@ -1,4 +1,4 @@
 $dark-1: rgba(36, 35, 37, 1);
 $dark-2: rgb(49, 49, 54);
-$white: rgba(107, 127, 130, 1);
+$white: rgb(217, 197, 201);
 $red: rgba(240, 45, 58, 1);
