--- a/assets/style/default.scss
+++ b/assets/style/default.scss
@@ -5,3 +5,13 @@ body {
   background-color: $dark-1;
   color: white;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s;
+}
+
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
